-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8234565 | 11.0.7-oracle | Martin Doerr | P2 | Closed | Fixed | b01 |
| JDK-8230807 | 11.0.6 | Martin Doerr | P2 | Resolved | Fixed | b01 |
AIX build is broken because includes are missing:
callnode.cpp", line 1626.26: 1540-0062 (S) The incomplete class "BarrierSet" must not be used as a qualifier.
callnode.cpp", line 1626.26: 1540-0062 (S) The incomplete class "BarrierSet" must not be used as a qualifier.
- backported by
-
JDK-8230807 Fix missing includes after JDK-8212673
-
- Resolved
-
-
JDK-8234565 Fix missing includes after JDK-8212673
-
- Closed
-
- relates to
-
JDK-8212673 jtreg/applications/runthese/RunThese30M.java fails in C2 with "assert(!had_error) failed: bad dominance"
-
- Resolved
-