8213604: Fix missing includes after JDK-8212673

Reviewed-by: tschatzl, roland